# downloads-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: default.yaml
src/downloads_agent/: __init__.py  __main__.py  classifier.py  cli.py  config.py  errors.py  executor.py  notifier.py  planner.py  scanner.py  scheduler.py  undo.py
src/downloads_agent/data/: default.yaml
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_executor.py  test_integration.py  test_notifier.py  test_planner.py  test_scanner.py  test_scheduler.py  test_undo.py
