[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "downloads-agent"
dynamic = ["version"]
description = "Automated Downloads organizer for macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "downloads-agent contributors"},
]
keywords = ["macos", "downloads", "organizer", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
downloads-agent = "downloads_agent.cli:main"

[tool.setuptools.dynamic]
version = {attr = "downloads_agent.__version__"}

[tool.setuptools.package-data]
downloads_agent = ["data/default.yaml", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-v --cov=downloads_agent --cov-fail-under=75"

[tool.coverage.run]
source = ["downloads_agent"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
